# trainingAnalysisTool

./: .gitignore  CMakeLists.txt  data.txt  trainingData.csv  trainingData.xlsx
trainingAnalysisTool_exe/: CMakeLists.txt  main.cpp
trainingAnalysisTool_library/: CMakeLists.txt
trainingAnalysisTool_library/lib/: cadenceExercise.hpp  cardioTraining.hpp  cycling.hpp  revolutionExercise.hpp  running.hpp  strokeExercise.hpp  swimming.hpp  training.hpp  trainingArray.hpp  trainingInstance.hpp
trainingAnalysisTool_library/src/: cadenceExercise.cpp  cardioTraining.cpp  running.cpp  training.cpp  trainingArray.cpp  trainingInstance.cpp
